--- a/.env
+++ b/.env
@@ -1,15 +1,15 @@
-DATABASE_URL="postgresql://test%20db_owner:a1UyB6VpQJhH@ep-ancient-water-a5ds9vi8-pooler.us-east-2.aws.neon.tech/test%20db?sslmode=require"
+DATABASE_URL=""
 
 
 # Clerk Authentication
-NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY="pk_test_cGVhY2VmdWwtbG9jdXN0LTY3LmNsZXJrLmFjY291bnRzLmRldiQ"
-CLERK_SECRET_KEY="sk_test_hgA97BX1I5Po7P3T68vFQI1sPi7pKOLNnMMBkTENgN"
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=""
+CLERK_SECRET_KEY=""
 
 
 # ImageKit
-NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY= "public_jzdZ9wkk9kYYJ/mC0F5feAW359M="
-IMAGEKIT_PRIVATE_KEY= "private_B4L5NQkrUhCGUFK5mbHFLltGVI8="
-NEXT_PUBLIC_IMAGEKIT_URL_ENDPOINT= "https://ik.imagekit.io/zh9xhmm5bm"
+NEXT_PUBLIC_IMAGEKIT_PUBLIC_KEY= ""
+IMAGEKIT_PRIVATE_KEY= ""
+NEXT_PUBLIC_IMAGEKIT_URL_ENDPOINT= ""
 
 
 # Clerk URLs
